[package]
name = "fields_vr"
version = "0.1.0"
edition = "2021"

[features]
vr = ["idek/openxr"]

[dependencies]
structopt = { version = "0.3", default-features = false }
idek = { git = "https://github.com/Masterchef365/idek.git", rev = "6a5678f" }
ultraviolet = "0.8.1"
rand = { version = "0.8.5", features = ["small_rng"] }
